--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,39 +1,44 @@
 @import "../../vars.css";
 
 Footer {
-  min-height: 100px;
-  width: 93.65%;
-  text-align: center;
-  padding: 40px;
+    min-height: 100px;
+    width: 93.65%;
+    text-align: center;
+    padding: 40px;
+    position: fixed;
 }
 
 .footerContainer {
-  padding: 1em 0;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
+    padding: 1em 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
 }
 
 .infoName {
-  color: var(--color-text);
-  display: flex;
-  justify-content: center;
-  padding: 1em 0;
-  font-size: medium;
-  color: var(--color-secondary);
+    color: var(--color-text);
+    display: flex;
+    justify-content: center;
+    padding: 1em 0;
+    font-size: medium;
+    color: var(--color-secondary);
 }
 
 .contactInfo {
-  color: var(--color-text);
-  display: flex;
-  justify-content: center;
+    /* color: var(--color-text); */
+    display: flex;
+    justify-content: center;
 }
 
 .contactInfo > a {
-  text-decoration: none;
-  color: var(--color-secondary);
-  cursor: pointer;
+    text-decoration: none;
+    color: var(--color-secondary);
+    cursor: pointer;
 
-  padding: 3px;
+    padding: 3px;
+}
+
+.blueText {
+    color: var(--color-blue-highlight);
 }
