fix: contact button and padding
- add fix for contact form sizing

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -83,7 +83,7 @@
     form {
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        gap: 8px;
 
         input,
         textarea {
@@ -101,6 +101,7 @@
             color: white;
             cursor: pointer;
             font-weight: 500;
+            border-radius: 5px;
         }
     }
 }
